--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         UI/UX Дизайнер
       </span>
       <div class="social-group">
-        <a href="https://vk.com/evgn.ivanov" class="social-media text-decoration-none" target="_blank">vk</a>
+        <a href="https://vk.me/evgn.ivanov" class="social-media text-decoration-none" target="_blank">vk</a>
         <a href="https://t-do.ru/evgn_ivanov" class="social-media text-decoration-none" target="_blank">telegram</a>
         <a href="https://www.instagram.com/evgn.ivanov/" class="social-media text-decoration-none" target="_blank">instagram</a>
         <a href="https://youtube.com/c/evgn-ivanov" class="social-media text-decoration-none" target="_blank">youtube</a>
