--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="colomn">
       <a class="item text-decoration-none" href="https://vk.com/app7020409"" target="_blank">
         <div class="img-block img-block--large">
-          <div class="img" style="background-image: url(img/item_bg_1.jpg)"></div>
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
         </div>
         <span class="title">Antodo</span>
         <span class="subtitle">Таск менеджер</span>
