--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/DabPAJc2uUS0aA" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/item_bg_4.jpg)"></div>
+          <div class="img" style="background-image: url(img/develop.jpg)"></div>
         </div>
         <span class="title">В разработке</span>
         <span class="subtitle">Различные макеты</span>
@@ -70,7 +70,7 @@
     <div class="colomn">
       <a class="item text-decoration-none" href="https://vk.com/app6824656" target="_blank">
           <div class="img-block">
-            <div class="img" style="background-image: url(img/item_bg_3.jpg)"></div>
+            <div class="img" style="background-image: url(img/ticket.jpg)"></div>
           </div>
           <span class="title">Билетик ВКино</span>
           <span class="subtitle">Сервис покупки билетов </span>
