--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <div class="colomn">
       <a class="item text-decoration-none" href="https://vk.com/app6824656" target="_blank">
           <div class="img-block">
-            <div class="img" style="background-image: url(img/ticket.jpg)"></div>
+            <div class="img" style="background-image: url(img/biletikvkino.jpg)"></div>
           </div>
           <span class="title">Билетик ВКино</span>
           <span class="subtitle">Сервис покупки билетов </span>
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/LMDTg5Y5Hh_E7Q" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/item_bg_2.jpg)"></div>
+          <div class="img" style="background-image: url(img/prosypanych.jpg)"></div>
         </div>
         <span class="title">Просыпаныч</span>
         <span class="subtitle">Социальный будильник</span>
