--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </a>
       <a class="item text-decoration-none" href="https://xlgo.ru" target="_blank">
         <div class="img-block">
-          <div class="img" style="background-image: url(img/item_bg_6.jpg)"></div>
+          <div class="img" style="background-image: url(img/halyava.jpg)"></div>
         </div>
         <span class="title">Халява GO</span>
         <span class="subtitle">Лендинг для приложения</span>
