--- a/index.html
+++ b/index.html
@@ -31,84 +31,106 @@
   </section>
   <section class="grid">
     <div class="colomn">
-      <a class="item text-decoration-none" href="https://vk.com/app7020409"" target="_blank">
+      <a class="item text-decoration-none" href="https://vk.com/app7020409" target="_blank">
         <div class="img-block img-block--large">
           <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Antodo</span>
+            <span class="subtitle">Таск-менеджер в vk</span>
+          </div>
         </div>
-        <span class="title">Antodo</span>
-        <span class="subtitle">Таск менеджер</span>
       </a>
-      <a class="item text-decoration-none" href="https://yadi.sk/d/DabPAJc2uUS0aA" target="_blank">
-        <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/develop.jpg)"></div>
+      <a class="item text-decoration-none" href="https://xlgo.ru" target="_blank">
+        <div class="img-block">
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Халява GO</span>
+            <span class="subtitle">Кэшбэк сервис</span>
+          </div>
         </div>
-        <span class="title">В разработке</span>
-        <span class="subtitle">Различные макеты</span>
       </a>
       <a class="item text-decoration-none" href="https://bpworld.ru" target="_blank">
         <div class="img-block">
-          <div class="img" style="background-image: url(img/item_bg_5.jpg)"></div>
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">BP World</span>
+            <span class="subtitle">Инвест площадка</span>
+          </div>
         </div>
-        <span class="title">BP World</span>
-        <span class="subtitle">Инвестиционная площадка</span>
-      </a>
-      <a class="item text-decoration-none" href="https://yadi.sk/d/VL9Nbsm-APFgoQ" target="_blank">
-        <div class="img-block img-block--large">
-          <div class="img" style="background-image: url(img/item_bg_8.jpg)"></div>
-        </div>
-        <span class="title">Банк Открытие</span>
-        <span class="subtitle">Спец.проект на vc.ru</span>
       </a>
       <a class="item text-decoration-none" href="https://p2d.ru" target="_blank">
-        <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/item_bg_9.jpg)"></div>
+        <div class="img-block img-block--large">
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Play2Day</span>
+            <span class="subtitle">Магазин видеоигр</span>
+          </div>
         </div>
-        <span class="title">Play2Day</span>
-        <span class="subtitle">Магазин видеоигр</span>
+      </a>
+      <a class="item text-decoration-none" href="https://b2b.xlgo.ru" target="_blank">
+        <div class="img-block img-block--small">
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Халява GO для бизнеса</span>
+            <span class="subtitle">Приложение для предпринимателей</span>
+          </div>
+        </div>
       </a>
     </div>
     <div class="colomn">
       <a class="item text-decoration-none" href="https://vk.com/app6824656" target="_blank">
-          <div class="img-block">
-            <div class="img" style="background-image: url(img/biletikvkino.jpg)"></div>
+        <div class="img-block">
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Билетик ВКино</span>
+            <span class="subtitle">Покупка билетов на vk.com</span>
           </div>
-          <span class="title">Билетик ВКино</span>
-          <span class="subtitle">Сервис покупки билетов </span>
+        </div>
+      </a>
+      <a class="item text-decoration-none" href="https://yadi.sk/d/DabPAJc2uUS0aA" target="_blank">
+        <div class="img-block img-block--small">
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">InDev</span>
+            <span class="subtitle">Различные макеты</span>
+          </div>
+        </div>
+      </a>
+      <a class="item text-decoration-none" href="https://yadi.sk/d/VL9Nbsm-APFgoQ" target="_blank">
+        <div class="img-block img-block--large">
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Банк Открытие</span>
+            <span class="subtitle">Спец. проект на vc.ru</span>
+          </div>
+        </div>
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/LMDTg5Y5Hh_E7Q" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/prosypanych.jpg)"></div>
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Просыпаныч</span>
+            <span class="subtitle">Социальный сервис в vk</span>
+          </div>
         </div>
-        <span class="title">Просыпаныч</span>
-        <span class="subtitle">Социальный будильник</span>
-      </a>
-      <a class="item text-decoration-none" href="https://xlgo.ru" target="_blank">
-        <div class="img-block">
-          <div class="img" style="background-image: url(img/halyava.jpg)"></div>
-        </div>
-        <span class="title">Халява GO</span>
-        <span class="subtitle">Лендинг для приложения</span>
-      </a>
-      <a class="item text-decoration-none" href="https://b2b.xlgo.ru" target="_blank">
-        <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/item_bg_7.jpg)"></div>
-        </div>
-        <span class="title">Халява GO – бизнес</span>
-        <span class="subtitle">Лендинг для партнёров</span>
       </a>
       <a class="item text-decoration-none" href="https://arcadeinvest.com" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/item_bg_10.jpg)"></div>
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Arcade Invest</span>
+            <span class="subtitle">Инвест площадка</span>
+          </div>
         </div>
-        <span class="title">Arcade Invest</span>
-        <span class="subtitle">Инвестиционная площадка</span>
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/lejrcr1ypoMNSg" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/item_bg_11.jpg)"></div>
+          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="item-text">
+            <span class="title">Министерство культуры</span>
+            <span class="subtitle">Гео-приложение с социальными механиками</span>
+          </div>
         </div>
-        <span class="title">Министерство Культуры</span>
-        <span class="subtitle">Социальное приложение</span>
       </a>
     </div>
   </section>
