просыпаныч span edit

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="img" style="background-image: url(img/antodo.jpg)"></div>
           <div class="item-text">
             <span class="title">Билетик ВКино</span>
-            <span class="subtitle">Покупка билетов в vk/span>
+            <span class="subtitle">Покупка билетов в vk</span>
           </div>
         </div>
       </a>
