add bp img, b2bxlgo scale edit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </a>
       <a class="item text-decoration-none" href="https://bpworld.ru" target="_blank">
         <div class="img-block">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/bpworld.jpg)"></div>
           <div class="item-text">
             <span class="title">BP World</span>
             <span class="subtitle">Инвест площадка</span>
@@ -68,7 +68,7 @@
         </div>
       </a>
       <a class="item text-decoration-none" href="https://b2b.xlgo.ru" target="_blank">
-        <div class="img-block img-block--small">
+        <div class="img-block">
           <div class="img" style="background-image: url(img/antodo.jpg)"></div>
           <div class="item-text">
             <span class="title">Халява GO для бизнеса</span>
