--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </a>
       <a class="item text-decoration-none" href="https://xlgo.ru" target="_blank">
         <div class="img-block">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/xlgo.jpg)"></div>
           <div class="item-text">
             <span class="title">Халява GO</span>
             <span class="subtitle">Кэшбэк сервис</span>
@@ -60,7 +60,7 @@
       </a>
       <a class="item text-decoration-none" href="https://p2d.ru" target="_blank">
         <div class="img-block img-block--large">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/p2d.jpg)"></div>
           <div class="item-text">
             <span class="title">Play2Day</span>
             <span class="subtitle">Магазин видеоигр</span>
@@ -69,7 +69,7 @@
       </a>
       <a class="item text-decoration-none" href="https://b2b.xlgo.ru" target="_blank">
         <div class="img-block">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/b2bxlgo.jpg)"></div>
           <div class="item-text">
             <span class="title">Халява GO для бизнеса</span>
             <span class="subtitle">Приложение для предпринимателей</span>
@@ -80,7 +80,7 @@
     <div class="colomn">
       <a class="item text-decoration-none" href="https://vk.com/app6824656" target="_blank">
         <div class="img-block">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/biletikvkino.jpg)"></div>
           <div class="item-text">
             <span class="title">Билетик ВКино</span>
             <span class="subtitle">Покупка билетов в vk</span>
@@ -89,7 +89,7 @@
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/DabPAJc2uUS0aA" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/dev.jpg)"></div>
           <div class="item-text">
             <span class="title">InDev</span>
             <span class="subtitle">Различные макеты</span>
@@ -98,7 +98,7 @@
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/VL9Nbsm-APFgoQ" target="_blank">
         <div class="img-block img-block--large">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/bankopen.jpg)"></div>
           <div class="item-text">
             <span class="title">Банк Открытие</span>
             <span class="subtitle">Спец. проект на vc.ru</span>
@@ -107,7 +107,7 @@
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/LMDTg5Y5Hh_E7Q" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/prosipanich.jpg)"></div>
           <div class="item-text">
             <span class="title">Просыпаныч</span>
             <span class="subtitle">Социальный сервис в vk</span>
@@ -116,7 +116,7 @@
       </a>
       <a class="item text-decoration-none" href="https://arcadeinvest.com" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/arcade.jpg)"></div>
           <div class="item-text">
             <span class="title">Arcade Invest</span>
             <span class="subtitle">Инвест площадка</span>
@@ -125,7 +125,7 @@
       </a>
       <a class="item text-decoration-none" href="https://yadi.sk/d/lejrcr1ypoMNSg" target="_blank">
         <div class="img-block img-block--small">
-          <div class="img" style="background-image: url(img/antodo.jpg)"></div>
+          <div class="img" style="background-image: url(img/culture.jpg)"></div>
           <div class="item-text">
             <span class="title">Министерство культуры</span>
             <span class="subtitle">Гео-приложение с социальными механиками</span>
