text different color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a class="item text-decoration-none" href="https://vk.com/app7020409" target="_blank">
         <div class="img-block img-block--large">
           <div class="img" style="background-image: url(img/antodo.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text antodo">
             <span class="title">Antodo</span>
             <span class="subtitle">Таск-менеджер в vk</span>
           </div>
@@ -43,7 +43,7 @@
       <a class="item text-decoration-none" href="https://xlgo.ru" target="_blank">
         <div class="img-block">
           <div class="img" style="background-image: url(img/xlgo.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text xlgo">
             <span class="title">Халява GO</span>
             <span class="subtitle">Кэшбэк сервис</span>
           </div>
@@ -52,7 +52,7 @@
       <a class="item text-decoration-none" href="https://bpworld.ru" target="_blank">
         <div class="img-block">
           <div class="img" style="background-image: url(img/bpworld.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text bpworld">
             <span class="title">BP World</span>
             <span class="subtitle">Инвест площадка</span>
           </div>
@@ -61,7 +61,7 @@
       <a class="item text-decoration-none" href="https://p2d.ru" target="_blank">
         <div class="img-block img-block--large">
           <div class="img" style="background-image: url(img/p2d.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text p2d">
             <span class="title">Play2Day</span>
             <span class="subtitle">Магазин видеоигр</span>
           </div>
@@ -70,7 +70,7 @@
       <a class="item text-decoration-none" href="https://b2b.xlgo.ru" target="_blank">
         <div class="img-block">
           <div class="img" style="background-image: url(img/b2bxlgo.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text b2bxlgo">
             <span class="title">Халява GO для бизнеса</span>
             <span class="subtitle">Приложение для предпринимателей</span>
           </div>
@@ -81,7 +81,7 @@
       <a class="item text-decoration-none" href="https://vk.com/app6824656" target="_blank">
         <div class="img-block">
           <div class="img" style="background-image: url(img/biletikvkino.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text biletik">
             <span class="title">Билетик ВКино</span>
             <span class="subtitle">Покупка билетов в vk</span>
           </div>
@@ -90,7 +90,7 @@
       <a class="item text-decoration-none" href="https://yadi.sk/d/DabPAJc2uUS0aA" target="_blank">
         <div class="img-block img-block--small">
           <div class="img" style="background-image: url(img/dev.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text dev">
             <span class="title">InDev</span>
             <span class="subtitle">Различные макеты</span>
           </div>
@@ -99,7 +99,7 @@
       <a class="item text-decoration-none" href="https://yadi.sk/d/VL9Nbsm-APFgoQ" target="_blank">
         <div class="img-block img-block--large">
           <div class="img" style="background-image: url(img/bankopen.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text bank">
             <span class="title">Банк Открытие</span>
             <span class="subtitle">Спец. проект на vc.ru</span>
           </div>
@@ -108,7 +108,7 @@
       <a class="item text-decoration-none" href="https://yadi.sk/d/LMDTg5Y5Hh_E7Q" target="_blank">
         <div class="img-block img-block--small">
           <div class="img" style="background-image: url(img/prosipanich.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text prosipanich">
             <span class="title">Просыпаныч</span>
             <span class="subtitle">Социальный сервис в vk</span>
           </div>
@@ -117,7 +117,7 @@
       <a class="item text-decoration-none" href="https://arcadeinvest.com" target="_blank">
         <div class="img-block img-block--small">
           <div class="img" style="background-image: url(img/arcade.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text arcade">
             <span class="title">Arcade Invest</span>
             <span class="subtitle">Инвест площадка</span>
           </div>
@@ -126,7 +126,7 @@
       <a class="item text-decoration-none" href="https://yadi.sk/d/lejrcr1ypoMNSg" target="_blank">
         <div class="img-block img-block--small">
           <div class="img" style="background-image: url(img/culture.jpg)"></div>
-          <div class="item-text">
+          <div class="item-text culture">
             <span class="title">Министерство культуры</span>
             <span class="subtitle">Гео-приложение с социальными механиками</span>
           </div>
