--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="img-block img-block--small">
           <div class="img" style="background-image: url(img/dev.jpg)"></div>
           <div class="item-text dev">
-            <span class="title">InDev</span>
+            <span class="title">В разработке</span>
             <span class="subtitle">Различные макеты</span>
           </div>
         </div>
@@ -119,7 +119,7 @@
           <div class="img" style="background-image: url(img/arcade.jpg)"></div>
           <div class="item-text arcade">
             <span class="title">Arcade Invest</span>
-            <span class="subtitle">Инвест площадка</span>
+            <span class="subtitle">Инвестиции в геймерскую экосистему</span>
           </div>
         </div>
       </a>
