--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="img" style="background-image: url(img/prosipanich.jpg)"></div>
           <div class="item-text prosipanich">
             <span class="title">Просыпаныч</span>
-            <span class="subtitle">Социальный сервис в vk</span>
+            <span class="subtitle">Социальный будильник в vk</span>
           </div>
         </div>
       </a>
