--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
       </a>
-      <a class="item text-decoration-none" href="https://xlgo.ru" target="_blank">
+      <a class="item item-disable text-decoration-none" href="https://xlgo.ru" target="_blank">
         <div class="img-block">
           <div class="img" style="background-image: url(img/xlgo.jpg)"></div>
           <div class="item-text xlgo">
@@ -67,7 +67,7 @@
           </div>
         </div>
       </a>
-      <a class="item text-decoration-none" href="https://b2b.xlgo.ru" target="_blank">
+      <a class="item item-disable text-decoration-none" href="" target="_blank">
         <div class="img-block">
           <div class="img" style="background-image: url(img/b2bxlgo.jpg)"></div>
           <div class="item-text b2bxlgo">
