--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
       </a>
-      <a class="item text-decoration-none" href="https://p2d.ru" target="_blank">
+      <a class="item text-decoration-none" href="https://beta.p2d.ru/catalog" target="_blank">
         <div class="img-block img-block--large">
           <div class="img" style="background-image: url(img/p2d.jpg)"></div>
           <div class="item-text p2d">
