Subtitle edit (personal project)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="img" style="background-image: url(img/antodo.jpg)"></div>
           <div class="item-text antodo">
             <span class="title">Antodo</span>
-            <span class="subtitle">Таск-менеджер в vk</span>
+            <span class="subtitle">Таск-менеджер (личный проект))</span>
           </div>
         </div>
       </a>
@@ -83,7 +83,7 @@
           <div class="img" style="background-image: url(img/biletikvkino.jpg)"></div>
           <div class="item-text biletik">
             <span class="title">Билетик ВКино</span>
-            <span class="subtitle">Покупка билетов в vk</span>
+            <span class="subtitle">Покупка билетов в кино (личный проект))</span>
           </div>
         </div>
       </a>
@@ -110,7 +110,7 @@
           <div class="img" style="background-image: url(img/prosipanich.jpg)"></div>
           <div class="item-text prosipanich">
             <span class="title">Просыпаныч</span>
-            <span class="subtitle">Социальный будильник в vk</span>
+            <span class="subtitle">Социальный будильник (личный проект)</span>
           </div>
         </div>
       </a>
